# bnn

./: main.py  pyproject.toml
bnn/: generator.py  models.py  schemas.py
