[project]
name = "bnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "pandera>=0.22.1",
    "pymc>=5.15.0",
    "seaborn>=0.13.2",
]
